--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,11 +14,9 @@ jobs:
     - uses: actions/checkout@v2
     - name: Login to DockerHub
       run: echo ${{ secrets.DOCKERHUB_PASSWORD }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
-    - name: Get the version
-      run: echo ::set-output name=tag::$(echo date +%s)
     - name: Build and tag the Docker image
-      run: docker build . --file Dockerfile --tag bus-poller:${{steps.vars.outputs.tag}} --tag bus-poller:latest
+      run: docker build . --file Dockerfile --tag trtd/bus-poller:${{ GITHUB_RUN_NUMBER }} --tag trtd/bus-poller:latest
     - name: Push the image with version number
-      run: docker push bus-poller:${{steps.vars.outputs.tag}}
+      run: docker push bus-poller:${{ GITHUB_RUN_NUMBER }}
     - name: Push the latest image
       run: docker push bus-poller:tag
