--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,6 +17,6 @@ jobs:
     - name: Build and tag the Docker image
       run: docker build . --file Dockerfile --tag trtd/bus-poller:${GITHUB_RUN_NUMBER} --tag trtd/bus-poller:latest
     - name: Push the image with version number
-      run: docker push bus-poller:${GITHUB_RUN_NUMBER}
+      run: docker push trtd/bus-poller:${GITHUB_RUN_NUMBER}
     - name: Push the latest image
       run: docker push bus-poller:tag
